config validator hof now checks obj is instanceof str